kubernetes/frontend/05-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
spec:
  ingressClassName: "nginx"
  tls:
    - secretName: ingress-example-tls
      hosts:
        - "026-35.k8s.praktikum-services.tech"
  rules:
  - host: "026-35.k8s.praktikum-services.tech"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 8080
